Improving cover image of midhari, mabni and balagha

--- a/posts/2019-02-07-mudhari/2019-02-07-mudhari.md
+++ b/posts/2019-02-07-mudhari/2019-02-07-mudhari.md
@@ -13,7 +13,7 @@ label:
   - Nahw
 slug: fil-mudhari
 published: true
-image: ./10-nawasib-mudhari.png
+image: ./4-jawazim-mudhari.png
 ---
 
 **Fi'l Mudhari**{: .firstword} Or **فعل مضارع**{: .firstword .arabic} is used to express an action in the present or an action that will happen in the future.
