--- a/posts/2019-02-11-mabni/2019-02-11-mabni.md
+++ b/posts/2019-02-11-mabni/2019-02-11-mabni.md
@@ -13,7 +13,7 @@ label:
   - Nahw
 slug: mabni
 published: true
-image: ./four-mabni.png
+image: ./4-mabni.png
 ---
 
 **Mabni**{: .firstword} Or **مبني**{: .firstword} are الكلمات in Arabic grammar whose endings are fixed.
@@ -30,7 +30,7 @@ The ending of Mabni can be,
 - Kasra (الكسر)
   - e.g. أمسِ (meaning اليوم السابق) Or الأمسِ (meaning الماضي/past)
 
-![4 Mabni](./four-mabni.png){:title="4 Mabni"}
+![4 Mabni](./4-mabni.png){:title="4 Mabni"}
 
 <br/>
 
