Improved the image snippet of posts

--- a/posts/2018-12-23-tawabi/2018-12-23-tawabi.md
+++ b/posts/2018-12-23-tawabi/2018-12-23-tawabi.md
@@ -12,7 +12,7 @@ label:
   - Nahw
 slug: Tawabi-التوابع
 published: true
-image: ./four-types-of-tawabi.png
+image: ./4-types-of-tawabi.png
 ---
 
 **Tawabi'**{: .firstword} or **التوابع**{: .firstword} is a plural of word ```تابع```.  
@@ -41,7 +41,7 @@ There are four types of Tawabi'
 - التوكيد
 - البدل
 
-![Four Types of Tawabi](./four-types-of-tawabi.png){:title="Four Types of Tawabi"}
+![Four Types of Tawabi](./4-types-of-tawabi.png){:title="Four Types of Tawabi"}
 
 <br/>
 
