--- a/posts/2019-01-12-adad/2019-01-12-adad.md
+++ b/posts/2019-01-12-adad/2019-01-12-adad.md
@@ -13,7 +13,7 @@ label:
   - Nahw
 slug: adad
 published: true
-image: ./four-cases-of-adad.png
+image: ./4-cases-of-adad.png
 ---
 
 **Adad**{: .firstword} or **العدد**{: .firstword} is a very fascinating concept of Arabic grammar in which we learn how Arabs used to count things.
@@ -93,7 +93,7 @@ OR
 
 <br/>
 
-![Four Cases of Adad](./four-cases-of-adad.png){:title="Four Cases of Adad"}
+![Four Cases of Adad](./4-cases-of-adad.png){:title="Four Cases of Adad"}
 
 <br/>
 
