--- a/posts/2018-12-23-tawabi/2018-12-23-tawabi.md
+++ b/posts/2018-12-23-tawabi/2018-12-23-tawabi.md
@@ -6,11 +6,11 @@ summary: We will learn what is Tawabi' (التوابع) and its types viz Nai't 
 date: '2018-12-23'
 update_date: '2019-03-02'
 tags:
-  - Tawabi'
+  - Tawabi
   - Nahw
 label:
   - Nahw
-slug: Tawabi
+slug: tawabi
 published: true
 image: ./4-types-of-tawabi.png
 ---
