gatsby-theme-blog-starter -> 2.0.1 Added Keywords in frontmatter corrected slug and added keyword in pages

--- a/posts/2018-09-06-harf-nida/2018-09-06-harf-nida.md
+++ b/posts/2018-09-06-harf-nida/2018-09-06-harf-nida.md
@@ -8,6 +8,9 @@ update_date: '2019-03-02'
 tags:
   - Harf Nida
   - Nahw
+keywords:
+  - Harf Nida
+  - Nahw
 label:
   - Nahw
 slug: harf-nida-in-arabic
