--- a/posts/2018-08-12-manqoos/2018-08-12-manqoos.md
+++ b/posts/2018-08-12-manqoos/2018-08-12-manqoos.md
@@ -8,6 +8,9 @@ update_date: '2019-08-31'
 tags:
   - Ism Manqoos
   - Nahw
+keywords:
+  - Ism Manqoos
+  - Nahw
 label:
   - Nahw
 slug: ism-manqoos
