--- a/posts/2018-11-28-tasgheer/2018-11-28-tasgheer.md
+++ b/posts/2018-11-28-tasgheer/2018-11-28-tasgheer.md
@@ -8,6 +8,9 @@ update_date: '2019-03-02'
 tags:
   - Tasgheer
   - Sarf
+keywords:
+  - Tasgheer
+  - Sarf
 label:
   - Sarf
 slug: tasgheer-arabic-grammar
